# pshirley-ray-tracer

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.h  Hitable.h  HitableList.h  Material.h  Sphere.h  ray.h  stb_image_write.h  vec3.h
src/: main.cpp
